--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Welcome to Firebase Hosting By ElectronSz
+    </title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.7.0/firebase-app.js"></script>
